2011-10-16  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/plot/PiePlot.java
    (drawItem): Use new Paint lookup,
    (getArcCenter): New protected method,
    (lookupSectionPaint): Handle GradientPaint.

2011-10-16  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/util/ParamChecks.java: New class;
    * org/jfree/data/general/Series.java
    (vetoableChangeSupport): New field,
    (Series(Comparable, String)): Initialise vetoableChangeSupport,
    (setKey): Fire vetoable property change,
    (clone): Initialise vetoableChangeSupport,
    (addVetoableChangeListener): New method;
    * org/jfree/data/xy/XYSeriesCollection.java
    (XYSeriesCollection(XYSeries)): Register listener,
    (addSeries): Check for duplicate key, register listener,
    (removeSeries): Deregister listener,
    (removeAllSeries): Likewise,
    (getSeriesIndex): New method,
    (vetoableChange): New method.

2011-10-16  Martin Hoeller <martin.hoeller@xss.co.at>

    * org/jfree/chart/renderer/DefaultPolarItemRenderer.java
    (readObject): Handle fillComposite serialization;
    (writeObject): Likewise.

2011-10-15  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/xy/XYLineAndShapeRenderer.java
    (getLegendItem):  Added early returns to reduce indentation, updated
    Javadoc.

2011-10-13  Martin Hoeller <martin.hoeller@xss.co.at>

    * pom.xml added

2011-10-11  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/data/time/TimeSeries.java
    (update(RegularTimePeriod, double)): new method.

2011-10-11  Martin Hoeller  <martin.hoeller@xss.co.at>

    Patch 3421088:
    * org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
    (drawVerticalItem): bugfix for misaligned whiskers.

2011-10-11  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 3237879:
    * org/jfree/chart/plot/RingPlot.java
    (drawItem): Check sectionOutlineVisible flag.
