@@ -1,3 +1,9 @@
+2011-10-18  David Gilbert <david.gilbert@object-refinery.com>
+
+    Bug 3190615:
+    * org/jfree/data/xy/CategoryTableXYDataset.java
+    (clear): New method.
+
 2011-10-16  David Gilbert <david.gilbert@object-refinery.com>
 
     * org/jfree/chart/plot/PiePlot.java
